# graylog-logger

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  BaseLogHandlerStandIn.hpp  BaseLogHandlerTest.cpp  CMakeLists.txt  ConcurrentQueue.hpp  Doxyfile  EXAMPLES.md  GraylogInterface.cpp  GraylogInterface.hpp  GraylogInterfaceTest.cpp  Jenkinsfile  LICENSE.md  LogUtil.cpp  LogUtil.hpp  Logger.hpp  LoggingBase.cpp  PULL_REQUEST_TEMPLATE.md  README.md  TODO.md  clangformatdiff.sh  conanfile.py  conanfile.txt  make_conan_package.sh  make_package.sh
ci/: check-formatting
cmake/: CppCheck.cmake  FindASIO.cmake  FindConcurrentQueue.cmake  FindGoogleBenchmark.cmake  Findconcurrentqueue.cmake  GraylogLoggerConfig.cmake.in  conan.cmake
cmake_modules/: CppCheck.cmake
conan/: conanfile.py
conan/test_package/: CMakeLists.txt  conanfile.py  example.cpp
conan_deployment/: conanfile.txt
console_logger/: CMakeLists.txt  ConsoleLogger.cpp  getopt.c  getopt.h
documentation/: README.md  changes.md  examples.md  usage.md
graylog_logger/: CMakeLists.txt
include/: ConsoleInterface.hpp  FileInterface.hpp  GraylogInterface.hpp  Log.hpp  LogUtil.hpp  Logger.hpp  LoggingBase.hpp
include/graylog_logger/: ConcurrentQueue.hpp  ConnectionStatus.hpp  ConsoleInterface.hpp  FileInterface.hpp  GraylogConnection.hpp  GraylogInterface.hpp  LibConfig.hpp.in  Log.hpp  LogUtil.hpp  Logger.hpp  LoggingBase.hpp  MinimalApply.h  MinimalApply.hpp  ThreadedExecutor.hpp  json.h
performance_test/: CMakeLists.txt  DummyLogHandler.cpp  DummyLogHandler.h  PerformanceTest.cpp
src/: CMakeLists.txt  ConsoleInterface.cpp  FileInterface.cpp  GraylogConnection.cpp  GraylogConnection.hpp  GraylogInterface.cpp  Log.cpp  LogUtil.cpp  Logger.cpp  LoggingBase.cpp  ThreadedExecutor.cpp  jsoncpp.cpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
tests/: BaseLogHandlerStandIn.hpp  BaseLogHandlerTest.cpp  CMakeLists.txt  ConsoleInterfaceTest.cpp  FileInterfaceTest.cpp  GraylogInterfaceTest.cpp  GraylogInterfaceTestClass.cpp  GraylogInterfaceTestClass.hpp  LogTestServer.cpp  LogTestServer.hpp  LoggingBaseTest.cpp  RunTests.cpp
unit_tests/: BaseLogHandlerStandIn.hpp  BaseLogHandlerTest.cpp  CMakeLists.txt  ConsoleInterfaceTest.cpp  FileInterfaceTest.cpp  GraylogInterfaceTest.cpp  LogMessageTest.cpp  LogTestServer.cpp  LogTestServer.hpp  LoggerTest.cpp  LoggingBaseTest.cpp  QueueLengthTest.cpp  RunTests.cpp  Semaphore.hpp
